--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,13 @@
 </head>
 
 
-<body>
+<body class="my-body">
 
+<ul class="my-ul">
+   <li>Runs automatically when on review page.</li>
+   <li>This extensions uses the student information on the review page to create an url link to dropbox</li>
+   <li>Still an early release. Will only work with DFE cohort</li>
+</ul>
 <script src="./content.js">
 
 </script>
