--- a/popup.html
+++ b/popup.html
@@ -13,9 +13,9 @@
 <body class="my-body">
 
 <ul class="my-ul">
-   <li>Runs automatically when on review page.</li>
-   <li>This extensions uses the student information on the review page to create an url link to dropbox</li>
-   <li>Still an early release. Will only work with DFE cohort</li>
+   <li>Runs automatically when on the review page.</li>
+   <li>This extension uses the student information on the review page to create an URL link to dropbox</li>
+   <li>Still an early release. Will only work with DFE student numbers</li>
 </ul>
 <script src="./content.js">
 
