--- a/popup.html
+++ b/popup.html
@@ -13,9 +13,10 @@
 <body class="my-body">
 
 <ul class="my-ul">
-   <li>Runs automatically when on the review page.</li>
+   <li>Runs automatically when review page has loaded.</li>
    <li>This extension uses the student information on the review page to create an URL link to dropbox</li>
-   <li>Still an early release. Will only work with DFE student numbers</li>
+   <li><b>All</b>: does a normal search for the students dropbox folder. If student bootcamp has more then one level, use this option. </li>
+   <li><b>Other</b>: Works with dfe only.</li>
 </ul>
 <script src="./content.js">
 
