--- a/popup.html
+++ b/popup.html
@@ -13,10 +13,11 @@
 <body class="my-body">
 
 <ul class="my-ul">
+   <b>Student dropbox - beta version</b>
    <li>Runs automatically when review page has loaded.</li>
    <li>This extension uses the student information on the review page to create an URL link to dropbox</li>
    <li><b>All</b>: does a normal search for the students dropbox folder. If student bootcamp has more then one level, use this option. </li>
-   <li><b>Other</b>: Works with dfe only.</li>
+   <li><b>Other buttons</b>: Works with dfe single bootcamp level only.</li>
 </ul>
 <script src="./content.js">
 
