--- a/popup.html
+++ b/popup.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+  
    <meta charset="UTF-8">
    <link href="/style.css" rel="stylesheet" type="text/css">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <script src="./jquery.min.js"></script>
    <title>Document</title>
 </head>
 
@@ -19,9 +21,9 @@
    <li><b>All</b>: does a normal search for the students dropbox folder. If student bootcamp has more then one level, use this option. </li>
    <li><b>Other buttons</b>: Works with dfe single bootcamp level only.</li>
 </ul>
-<script src="./content.js">
 
-</script>
+<script src="./content.js"></script>
+<script src="./btnHoverEffects.js"></script>
 </body>
 
 </html>
