--- a/popup.html
+++ b/popup.html
@@ -21,6 +21,8 @@
    <li><b>All</b>: does a normal search for the students dropbox folder. If student bootcamp has more then one level, use this option. </li>
    <li><b>Other buttons</b>: Works with dfe single bootcamp level only.</li>
 </ul>
+<input type="checkbox" id="dbx-checkbox" name="mainFolder">
+<label for="mainFolder">Open main folder automatically</label>
 
 <script src="./content.js"></script>
 <script src="./btnHoverEffects.js"></script>
