--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="./jquery.min.js"></script>
+   <script src="popup.js" defer> </script>
    <title>Document</title>
 </head>
 
@@ -15,17 +16,17 @@
 <body class="my-body">
 
 <ul class="my-ul">
-   <b>Student dropbox - beta version</b>
+   <li><b>Student dropbox - beta version</b></li>
    <li>Runs automatically when review page has loaded.</li>
    <li>This extension uses the student information on the review page to create an URL link to dropbox</li>
-   <li><b>All</b>: does a normal search for the students dropbox folder. If student bootcamp has more then one level, use this option. </li>
-   <li><b>Other buttons</b>: Works with dfe single bootcamp level only.</li>
+   <li><b>Find Student</b>: does a normal search for the students dropbox folder. If student bootcamp has more then one level, use this option. </li>
+   <li><b>Other buttons</b>: Works with dfe single level bootcamp only.</li>
 </ul>
+
 <input type="checkbox" id="dbx-checkbox" name="mainFolder">
-<label for="mainFolder">Open main folder automatically</label>
+<label for="mainFolder">Open "Find Student" automatically</label>
 
 <script src="./content.js"></script>
-<script src="./btnHoverEffects.js"></script>
 </body>
 
 </html>
